--- a/package.yml
+++ b/package.yml
@@ -11,6 +11,6 @@ page:
         setup: { title: 'translate:d2u_helper_setup', icon: rex-icon rex-icon-install, itemclass: pull-right, perm: d2u_staff[settings] }
 
 requires:
-    redaxo: >=5.10.0
+    redaxo: '>=5.10.0'
     packages:
         d2u_helper: '>=1.5.5'
