--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 package: d2u_staff
-version: '1.0.4'
+version: '1.1.0'
 author: Tobias Krais
 
 page:
@@ -8,6 +8,7 @@ page:
     icon: rex-icon fa-user-circle
     subpages:
         staff: { title: 'translate:d2u_staff', icon: rex-icon fa-user-circle }
+        company: { title: 'translate:d2u_staff_company', icon: rex-icon fa-building-o }
         setup: { title: 'translate:d2u_helper_setup', icon: rex-icon rex-icon-install, itemclass: pull-right, perm: d2u_staff[settings] }
         settings: { title: 'translate:d2u_helper_settings', icon: rex-icon rex-icon-system, itemclass: pull-right, perm: d2u_staff[settings] }
 
@@ -16,3 +17,5 @@ requires:
     packages:
         d2u_helper: '>=1.5.5'
         sprog: '>=1.0.0'
+    php:
+        version: '>=7.4'
