--- a/package.yml
+++ b/package.yml
@@ -1,11 +1,11 @@
 package: d2u_staff
 version: '1.1.0'
-author: Tobias Krais
+author: 'Tobias Krais'
 
 page:
     title: 'translate:d2u_staff'
     perm: d2u_staff[]
-    icon: rex-icon fa-user-circle
+    icon: 'rex-icon fa-user-circle'
     subpages:
         staff: { title: 'translate:d2u_staff', icon: rex-icon fa-user-circle }
         company: { title: 'translate:d2u_staff_company', icon: rex-icon fa-building-o }
