--- a/package.yml
+++ b/package.yml
@@ -4,13 +4,13 @@ author: Tobias Krais
 
 page:
     title: 'translate:d2u_staff'
-    perm: d2u_staff[]
+    perm: 'd2u_staff[]'
     icon: rex-icon fa-user-circle
     subpages:
         staff: { title: 'translate:d2u_staff', icon: rex-icon fa-user-circle }
         company: { title: 'translate:d2u_staff_company', icon: rex-icon fa-building-o }
-        setup: { title: 'translate:d2u_helper_setup', icon: rex-icon rex-icon-install, itemclass: pull-right, perm: d2u_staff[settings] }
-        settings: { title: 'translate:d2u_helper_settings', icon: rex-icon rex-icon-system, itemclass: pull-right, perm: d2u_staff[settings] }
+        setup: { title: 'translate:d2u_helper_setup', icon: rex-icon rex-icon-install, itemclass: pull-right, perm: 'd2u_staff[settings]' }
+        settings: { title: 'translate:d2u_helper_settings', icon: rex-icon rex-icon-system, itemclass: pull-right, perm: 'd2u_staff[settings]' }
 
 requires:
     redaxo: '>=5.10.0'
